--- a/src/components/todoItem/style.css
+++ b/src/components/todoItem/style.css
@@ -52,6 +52,10 @@
     box-shadow: 10px -10px 20px #929294, -10px 10px 20px #ffffff;
 }
 
+.hide {
+    display: none;
+}
+
 .check {
     text-align: center;
     display: inline-block;
